OrgKonaAI/kubernetes-manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: ingress-nginx
  labels:
    app: ui-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
      - name: ui-container
        image: us-central1-docker.pkg.dev/konaai-dev-462909/konaai-gke/ui:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "70m"
          limits:
            memory: "128Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: ingress-nginx
spec:
  selector:
    app: ui-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
